UPD: Se añade campo numberOfPeople a OrderData